tests/snapshots/unused_future_annotations/not_annotations.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/unused_future_annotations/not_annotations.input.py
---

