tests/snapshots/unused_future_annotations/not_annotations.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/unused_future_annotations/not_annotations.input.py
---
"""
Other `__future__` directives like `division` may still carry semantic
weight on legacy code paths and are out of scope. The rule fires only
on the `annotations` alias.
"""

from __future__ import division

x = 1 / 2
