tests/snapshots/unused_future_annotations/not_future.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/unused_future_annotations/not_future.input.py
---

