tests/snapshots/unused_future_annotations/not_future.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/unused_future_annotations/not_future.input.py
---
"""
A similarly-shaped import from a different module is untouched. The
rule fires only on `from __future__ import annotations`.
"""

from typing import annotations  # pretend module

x = annotations
