tests/snapshots/unused_future_annotations/param_annotation_only.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/unused_future_annotations/param_annotation_only.input.py
---
unused-future-annotations@239..274
