tests/snapshots/unused_future_annotations/relative_import_not_matched.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/unused_future_annotations/relative_import_not_matched.input.py
---

