tests/snapshots/unused_future_annotations/relative_import_not_matched.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/unused_future_annotations/relative_import_not_matched.input.py
---
"""
A relative `from . import annotations` carries `level > 0`, so the
detector skips it. The directive-shaped import resolves against the
package, not `__future__`, and stays in place.
"""

from . import annotations

x = annotations
