tests/snapshots/unused_future_annotations/sole_import_binding_safe.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/unused_future_annotations/sole_import_binding_safe.input.py
---
unused-future-annotations@191..226
