tests/snapshots/unused_future_annotations/sole_import_binding_safe.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/unused_future_annotations/sole_import_binding_safe.input.py
---
"""
Every annotation references `Node`, which is defined at module scope
before any annotation's offset. Eager evaluation would succeed even on
Python 3.13, so the directive is removed.
"""



class Node:
    pass


def visit(node: Node) -> Node:
    return node


root: Node = Node()
