tests/snapshots/unused_future_annotations/sole_import_binding_unsafe.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/unused_future_annotations/sole_import_binding_unsafe.input.py
---

